# PuddleEngine

./: LICENSE  PuddleEngine.sln  README.md
PuddleEngine/: CMakeLists.txt  PuddleEngine.vcxproj  PuddleEngine.vcxproj.filters  imgui.ini
PuddleEngine/shader/spv/: base.frag.spv  brdflut.vert.spv  colorID.vert.spv  environment.frag.spv  pointlightshadow.vert.spv  postProcess.frag.spv  prefilter.frag.spv  skybox.frag.spv  skybox.vert.spv
PuddleEngine/spv/: base.vert.spv  dirlightshadow.vert.spv  irradiance.frag.spv  irradiance.vert.spv  lineRender.vert.spv  physicsDebug.vert.spv  postProcess.vert.spv  prefilter.vert.spv
PuddleEngine/src/: common.cpp  common.h
PuddleEngine/src/engine/: sceneSerializer.cpp  sceneSerializer.h  ui.cpp  ui.h  viewport.h
PuddleEngine/src/pipeline/: envCubemapPipeline.cpp  envCubemapPipeline.h  irradianceCubemap.h  lineRender.h  physicsDebug.h  shadowMapPipeline.h
PuddleEngine/src/scene/: camera.h  light.cpp  line.h  mesh.h  physics.h  physicsDebugDrawer.h  scene.cpp  shadowMap.h
PuddleEngine/src/vulkan/: debugMessenger.cpp  debugMessenger.h  image.h  swapchain.h
